<resources>
    <string name="app_name">Requiry</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">Name</string>
    <string name="user_number">Phone Number</string>
    <string name="user_username">Username</string>
    <string name="user_password">Password</string>
    <string name="who">Who?</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="desc">Enter something about yourself...!!!</string>
    <string name="user_email">Email</string>
</resources>
