<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.requiry.SignUpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/input_nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "Name"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:paddingRight="16dp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/input_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your name" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/input_numberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "Phone Number"
            android:text="@string/user_number"
            android:textSize="18sp"
            android:paddingRight="16dp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/input_numberEditText"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="Enter your number" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/input_emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text = "Email"
                android:text="@string/user_email"
                android:textSize="18sp"
                android:paddingRight="16dp"
                android:textColor="#000000"/>
            <EditText
                android:id="@+id/input_emailEditText"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="Enter your EmailID" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/input_usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "Username"
            android:text="@string/user_username"
            android:textSize="18sp"
            android:paddingRight="16dp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/input_usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your username" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/input_passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text = "Password"
            android:text="@string/user_password"
            android:textSize="18sp"
            android:textColor="#000000"
            android:paddingRight="16dp"/>
        <EditText
            android:id="@+id/input_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your password"
            android:inputType="textPassword"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/who"
            android:textSize="18sp"
            android:textColor="#000000"
            android:paddingRight="16dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/whoradiogroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:textSize="18sp"
                android:id="@+id/student_radiobutton"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faculty"
                android:textSize="18sp"
                android:id="@+id/faculty_radiobutton"/>
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/input_userdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/desc"
        android:gravity="top"
        android:scrollHorizontally="false"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text="Register"
        android:background="@android:color/transparent"
        android:textColor="#e98000"
        android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
